--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "name": "note-taker",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Javamang21/note-taker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Javamang21/note-taker/issues"
+  },
+  "homepage": "https://github.com/Javamang21/note-taker#readme"
 }
