--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.13"
+    "fs": "*",
+    "nodemon": "^2.0.13",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "nodemon server.js"
@@ -10,7 +12,6 @@
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Javamang21/note-taker.git"
